@@ -11,10 +11,16 @@ term
 
 ### update log ###
 
+20/12/2016
+TESTPEXTF: test particle simulatoin with external potential only
+ use dm.dat for all the test particle simulatoin.
+ set SI_ntpdm=ndm
+TESTP -> TESTPDMF
+
 17/08/2016
-TESTP: test particle mode
+TESTP: test particle with dm.dat potential 
  use DM particle. Fix the other particles, and calculate gravity only for test partiles
- read testp.dat after initial dm decomposition. no more decomposition after that.
+ read testp.dat after initial dm decomposition. no more decomposition or tree build after that.
  counting the number of testp particle in each proc (ntpdm) in set_ini.F95
  set test particle with set_testpdm.F95
  fix the tree structure
